tools section added

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Movie Watcher</title>
 </head>
 
@@ -34,10 +34,9 @@
         openNewWindow.addEventListener("click", () => {
             ipcRenderer.send("key:newWindow");
         });
-
     </script>
     <script src="main.js"></script>
-    <script src="assets/mainWindow.js"></script>
+    <script src="mainWindow.js"></script>
 </body>
 
 </html>
