--- a/html/addWindow.html
+++ b/html/addWindow.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/addMovie.css">
     <title>Add Movie</title>
 </head>
-<body style="-webkit-app-region: drag">
+<body>
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-2 text-center add-movie">
