bug fixes and formatting

--- a/html/searchWindow.html
+++ b/html/searchWindow.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-md-8 offset-2 text-center add-movie">
                 <input type="text" id="movieName" placeholder="Movie Name">
-                <input type="text" id="directorName" placeholder="Director Name">
+                <!-- <input type="text" id="directorName" placeholder="Director Name"> -->
                 <input type="submit" value="Search" id="searchBtn">
                 <input type="submit" value="Cancel" id="cancelBtn">
             </div>
