--- a/main.html
+++ b/main.html
@@ -36,7 +36,12 @@
             ipcRenderer.send("key:newWindow");
         });
     </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     <script src="mainWindow.js"></script>
+    <script src="./assets/js/preview.js"></script>
 </body>
+
 </html>
