--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     <script src="mainWindow.js"></script>
-    <script src="./assets/js/preview.js"></script>
+    <!-- <script src="./assets/js/preview.js"></script> -->
 </body>
 
 </html>
